// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSplitPanel accepts panel props 1`] = `
<div
  class="euiPanel euiPanel--primary euiSplitPanel css-385eid-euiPanel-m-primary"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--success euiPanel--paddingMedium euiSplitPanel__inner testClass1 testClass2 css-1redum3-euiPanel-grow-none-m-success"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`EuiSplitPanel inner children are rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel css-1l0v6gd-euiPanel-m-plain-hasShadow"
>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  />
</div>
`;

exports[`EuiSplitPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiSplitPanel testClass1 testClass2 css-1l0v6gd-euiPanel-m-plain-hasShadow"
  data-test-subj="test subject string"
/>
`;

exports[`EuiSplitPanel renders as row 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row css-1l0v6gd-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive can be changed to different breakpoints 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel css-1l0v6gd-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel css-1l0v6gd-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive is rendered at small screens 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel css-1l0v6gd-euiPanel-m-plain-hasShadow"
/>
`;
